<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCafeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cafes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".20"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003"
        tools:ignore="ImageContrastCheck"
        android:importantForAccessibility="no" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/vie_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".82"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/SingUp"
            android:layout_width="144dp"
            android:layout_height="47dp"
            android:fontFamily="cursive"
            android:text="@string/Locales"
            android:textAlignment="center"
            android:textColor="#00b8d4"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/edit_nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:width="2dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/nombre"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SingUp"
            app:layout_constraintVertical_bias="0.03"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="RtlSymmetry,TextFields,VisualLintTextFieldSize,TextContrastCheck" />

        <EditText
            android:id="@+id/edit_telefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/telefono"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_nombre"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="Autofill,RtlSymmetry,TextFields,VisualLintTextFieldSize,TextContrastCheck" />

        <EditText
            android:id="@+id/edit_dueno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/Dueno"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_telefono"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="Autofill,RtlSymmetry,TextFields,VisualLintTextFieldSize,TextContrastCheck" />

        <EditText
            android:id="@+id/edit_direccion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/direccion"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_dueno"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="Autofill,RtlSymmetry,TextFields,VisualLintTextFieldSize,TextContrastCheck" />

        <Button
            android:id="@+id/btnVerificar"
            android:layout_width="258dp"
            android:layout_height="49dp"
            android:backgroundTint="@color/cyan"
            android:text="@string/btnVerificar"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_direccion"
            app:layout_constraintVertical_bias="0.09"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="258dp"
            android:layout_height="49dp"
            android:layout_marginBottom="172dp"
            android:backgroundTint="@color/cyan"
            android:text="@string/btnAgregar"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_direccion"
            app:layout_constraintVertical_bias="0.981"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/cyan"
            android:text="@string/btnEliminar"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnVerificar"
            app:layout_constraintVertical_bias="0.059"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/cyan"
            android:text="@string/btnActualizar"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnVerificar"
            app:layout_constraintVertical_bias="0.059"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAtrasEdi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            app:srcCompat="@drawable/ic_atras"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/coffe"
        android:layout_width="200dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/local"
        tools:ignore="VisualLintBounds,ImageContrastCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>